--- a/co2/templates/co2/index.html
+++ b/co2/templates/co2/index.html
@@ -1,4 +1,5 @@
 {% if all_capitals %}
+    <h3>These are the defined capitals</h3>
     <ul>
         {% for capital in all_capitals %}
         <li><a href="/co2/{{ capital.id }}">{{ capital.capital_title }}</a> </li>
