--- a/co2/templates/co2/detail.html
+++ b/co2/templates/co2/detail.html
@@ -3,6 +3,6 @@
 
 <ul>
     {% for impact in capital.impact_set.all %}
-    <li>{{ impact.impact_title }} - {{ impact.footprint }} - {{ impact.valuation }}</li>
+    <li>{{ impact.impact_title }} = {{ impact.footprint }} * {{ impact.valuation }}</li>
     {% endfor %}
 </ul>
