--- a/co2/templates/co2/detail.html
+++ b/co2/templates/co2/detail.html
@@ -1,3 +1,34 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!--Header-->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{% url 'co2:index' %}"> True Price </a>
+        </div>
+
+        <!--Items-->
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="">
+                    <a href="{% url 'co2:index' %}">
+                         <span class="glyphicon glyphicon-charts" aria-hidden = "true"></span>&nbsp; Capitals
+                    </a>
+                </li>
+                <li class="active">
+                    <a href="#">
+                       <span class="glyphicons glyphicons-ruler" aria-hidden = "true"></span>&nbsp; Impacts
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 <h1>{{ capital.capital_title }}</h1>
 
