--- a/co2/templates/co2/index.html
+++ b/co2/templates/co2/index.html
@@ -1,12 +1,18 @@
+{% extends 'co2/base.html' %}
+
+{% block body %}
+    {% if all_capitals %}
+        <h3>These are the defined capitals</h3>
+        <ul>
+            {% for capital in all_capitals %}
+            <li><a href="{% url 'co2:detail' capital.id %}">{{ capital.capital_title }}</a> </li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <h3>There are no capitals defined</h3>
+    {% endif %}
+{% endblock %}
 
 
-{% if all_capitals %}
-    <h3>These are the defined capitals</h3>
-    <ul>
-        {% for capital in all_capitals %}
-        <li><a href="{% url 'co2:detail' capital.id %}">{{ capital.capital_title }}</a> </li>
-        {% endfor %}
-    </ul>
-{% else %}
-    <h3>There are no capitals defined</h3>
-{% endif %}
+
+<a class="navbar-brand" href="{% url 'co2:index' %}"> url("images/trueprice.png") </a>
