--- a/co2/templates/co2/base.html
+++ b/co2/templates/co2/base.html
@@ -52,8 +52,8 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <li class="">
-                        <a href="#">
-                             <span class="glyphicon glyphicon-plus" aria-hidden = "true"></span>&nbsp; Add Impact
+                        <a href="{% url 'co2:capital-add' %}">
+                             <span class="glyphicon glyphicon-plus" aria-hidden = "true"></span>&nbsp; Add Capital
                         </a>
                     </li>
                     <li class="">
